Fix failing tests for ApplicationFormController